try to use TensorFlow version 1.13.2 instead of 2.0.0

--- a/dt-object-detection-training/Dockerfile
+++ b/dt-object-detection-training/Dockerfile
@@ -57,7 +57,7 @@ RUN ln -s $(which ${PYTHON}) /usr/local/bin/python
 # Set --build-arg TF_PACKAGE_VERSION=1.11.0rc0 to install a specific version.
 # Installs the latest version by default.
 ARG TF_PACKAGE=tensorflow
-ARG TF_PACKAGE_VERSION=
+ARG TF_PACKAGE_VERSION=1.13.2
 RUN ${PIP} install ${TF_PACKAGE}${TF_PACKAGE_VERSION:+==${TF_PACKAGE_VERSION}}
 
 COPY bashrc /etc/bash.bashrc
@@ -91,6 +91,7 @@ WORKDIR ${TF_PATH}
 
 # Install tensorflow models object detection
 RUN git clone https://github.com/tensorflow/models ${TF_PATH}/models
+RUN git checkout "tags/v1.13.0
 
 # install COCO API
 RUN git clone https://github.com/cocodataset/cocoapi.git /tmp/cocoapi
