--- a/dt-object-detection-training/models/ssdlite_mobilenet_v2_coco/pipeline.config
+++ b/dt-object-detection-training/models/ssdlite_mobilenet_v2_coco/pipeline.config
@@ -161,9 +161,9 @@ train_config {
   fine_tune_checkpoint_type: "detection"
 }
 train_input_reader {
-  label_map_path: "/src/dt-object-detection-training/models/ssdlite_mobilenet_v2_coco/mscoco_label_map.pbtxt"
+  label_map_path: "/src/dt-object-detection-training/data/mscoco_label_map.pbtxt"
   tf_record_input_reader {
-    input_path: "/data/mscoco_train.record"
+    input_path: "/src/dt-object-detection-training/data/mscoco_train.record"
   }
 }
 eval_config {
@@ -172,10 +172,10 @@ eval_config {
   use_moving_averages: false
 }
 eval_input_reader {
-  label_map_path: "/src/dt-object-detection-training/models/ssdlite_mobilenet_v2_coco/mscoco_label_map.pbtxt"
+  label_map_path: "/src/dt-object-detection-training/data/mscoco_label_map.pbtxt"
   shuffle: false
   num_readers: 1
   tf_record_input_reader {
-    input_path: "/data/mscoco_train.record"
+    input_path: "/src/dt-object-detection-training/data/mscoco_train.record"
   }
 }
