added a few additional pathes to Dockerfile and run setup.py build of tf/models/research

--- a/dt-object-detection-training/Dockerfile
+++ b/dt-object-detection-training/Dockerfile
@@ -107,10 +107,10 @@ RUN cp -r pycocotools ${TF_MODELS_RESEARCH_PATH}
 # From tensorflow/models/research/
 WORKDIR ${TF_MODELS_RESEARCH_PATH}
 RUN protoc object_detection/protos/*.proto --python_out=.
-RUN export PYTHONPATH="$PYTHONPATH:${TF_MODELS_RESEARCH_PATH}/slim"
+RUN export PYTHONPATH="$PYTHONPATH:${TF_MODELS_RESEARCH_PATH}:${TF_MODELS_RESEARCH_PATH}/slim:${TF_MODELS_RESEARCH_PATH}/object_detection"
+RUN ${PYTHON} setup.py build
 RUN ${PYTHON} setup.py install
-WORKDIR ${TF_MODELS_RESEARCH_PATH}/slim
-RUN ${PYTHON} setup.py install
+RUN ${PYTHON} slim/setup.py install
 
 RUN apt-get autoremove -y
 
