added gpu support

--- a/dt-object-detection-training/Dockerfile
+++ b/dt-object-detection-training/Dockerfile
@@ -1,30 +1,21 @@
-# Copyright 2018 The TensorFlow Authors. All Rights Reserved.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# ============================================================================
-#
-# THIS IS A GENERATED DOCKERFILE.
-#
-# This file was assembled from multiple pieces, whose use is documented
-# throughout. Please refer to the TensorFlow dockerfiles documentation
-# for more information.
+# Options:
 
-ARG UBUNTU_VERSION=18.04
+# Set --build-arg TF_PACKAGE_VERSION=1.11.0rc0 to install a specific version.
+# Installs the version 1.15.0 by default.
+ARG TF_PACKAGE_VERSION="1.15.0"
 
-FROM ubuntu:${UBUNTU_VERSION} as base
+# Set --build-arg GPU=-gpu to use gpu
+# For the 1.15 release, CPU and GPU support are included in a single package
+ARG GPU=""
 
-ARG USE_PYTHON_3_NOT_2
-# ARG _PY_SUFFIX=${USE_PYTHON_3_NOT_2:+3}
+# we use python 3
+FROM tensorflow/tensorflow:${TF_PACKAGE_VERSION}${GPU}-py3 as base
+
+# See http://bugs.python.org/issue19846
+ENV LANG C.UTF-8
+ENV TZ=Europe/Zurich
+
+# we use python 3
 ARG _PY_SUFFIX=3
 ENV PYTHON=python${_PY_SUFFIX}
 ARG PIP=pip${_PY_SUFFIX}
@@ -32,35 +23,8 @@ ARG PIP=pip${_PY_SUFFIX}
 # prevent interactive questions
 ARG DEBIAN_FRONTEND=noninteractive
 
-# See http://bugs.python.org/issue19846
-ENV LANG C.UTF-8
-ENV TZ=Europe/Zurich
-
-RUN apt-get update && apt-get install -y \
-    ${PYTHON} \
-    ${PYTHON}-pip
-
-RUN ${PIP} --no-cache-dir install --upgrade \
-    pip \
-    setuptools
-
-# Some TF tools expect a "python" binary
-RUN ln -s $(which ${PYTHON}) /usr/local/bin/python
-
-# Options:
-#   tensorflow
-#   tensorflow-gpu
-#   tf-nightly
-#   tf-nightly-gpu
-# Set --build-arg TF_PACKAGE_VERSION=1.11.0rc0 to install a specific version.
-# Installs the latest version by default.
-ARG TF_PACKAGE=tensorflow
-ARG TF_PACKAGE_VERSION="1.15.0"
-RUN ${PIP} install ${TF_PACKAGE}${TF_PACKAGE_VERSION:+==${TF_PACKAGE_VERSION}}
+# install tensorboard
 RUN ${PIP} install "tensorboard"${TF_PACKAGE_VERSION:+==${TF_PACKAGE_VERSION}}
-
-COPY bashrc /etc/bash.bashrc
-RUN chmod a+rwx /etc/bash.bashrc
 
 ARG REPO_NAME="dt-object-detection-training"
 ENV REPO_PATH="/src/${REPO_NAME}"
@@ -77,7 +41,7 @@ COPY ./requirements-apt.txt "${REPO_PATH}/"
 COPY ./requirements-py.txt "${REPO_PATH}/"
 
 # install apt dependencies
-RUN apt-get install -y --no-install-recommends \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     $(awk -F: '/^[^#]/ { print $1 }' "${REPO_PATH}/"requirements-apt.txt | uniq) \
   && rm -rf /var/lib/apt/lists/*
 
@@ -150,7 +114,7 @@ RUN chmod a+rwx ${LAUNCHFILE}
 
 # define command
 # CMD ["bash", "-c", "source /etc/bash.bashrc &&  && jupyter notebook --notebook-dir=${TF_PATH} --ip 0.0.0.0 --no-browser --allow-root"]
-CMD ["bash", "-c", "source /etc/bash.bashrc && ${LAUNCHFILE}"]
+CMD ["bash", "-c", "source /etc/bash.bashrc && ${LAUNCHFILE}; tensorboard --logdir=${MODEL_PATH}"]
 
 # maintainer
 LABEL maintainer="Maximilian Stoelzle (maximilian@stoelzle.ch)"
