--- a/.github/workflows/dockerimage_dt-object-detection-training.yml
+++ b/.github/workflows/dockerimage_dt-object-detection-training.yml
@@ -10,5 +10,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Docker login
+      run: docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_PASSWORD }}
     - name: Build the Docker image
       run: docker build -t mstoelzle/dt-object-detection-training:latest dt-object-detection-training/
+    - name: Push the Docker image
+      run: docker push dt-object-detection-training
