--- a/.github/workflows/dockerimage_dt-object-detection-training.yml
+++ b/.github/workflows/dockerimage_dt-object-detection-training.yml
@@ -11,7 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Docker login
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_PASSWORD }}
+      env:
+        DOCKER_USERNAME: secrets.DOCKER_USERNAME
+        DOCKER_PASSWORD: secrets.DOCKER_PASSWORD
+      run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
     - name: Build the Docker image
       run: docker build -t mstoelzle/dt-object-detection-training:latest dt-object-detection-training/
     - name: Push the Docker image
