--- a/.github/workflows/dockerimage_dt-object-detection-training.yml
+++ b/.github/workflows/dockerimage_dt-object-detection-training.yml
@@ -9,22 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      uses: actions/checkout@v1
-      docker_login:
-        name: Docker login
-        env:
-          DOCKER_USERNAME: secrets.DOCKER_USERNAME
-          DOCKER_PASSWORD: secrets.DOCKER_PASSWORD
-        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
-      docker_build_cpu:
-        needs: docker_login
-        run: docker build -t mstoelzle/dt-object-detection-training:latest dt-object-detection-training/
-      docker_push_cpu:
-        needs: docker_build_cpu
-        run: docker push mstoelzle/dt-object-detection-training:latest
-      docker_build_gpu:
-        needs: docker_login
-        run: docker build --build-arg GPU=-gpu -t mstoelzle/dt-object-detection-training:latest-gpu dt-object-detection-training/
-      docker_push_gpu:
-        needs: docker_build_gpu
-        run: docker push mstoelzle/dt-object-detection-training:latest-gpu
+    - uses: actions/checkout@v1
+    - name: Docker login
+      env:
+        DOCKER_USERNAME: secrets.DOCKER_USERNAME
+        DOCKER_PASSWORD: secrets.DOCKER_PASSWORD
+      run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build the Docker image
+      run: docker build -t mstoelzle/dt-object-detection-training:latest dt-object-detection-training/
+    - name: Push the Docker image
+      run: docker push mstoelzle/dt-object-detection-training:latest
