--- a/.github/workflows/dockerimage_dt-object-detection-training.yml
+++ b/.github/workflows/dockerimage_dt-object-detection-training.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
 
-  build:
+  build_cpu:
 
     runs-on: ubuntu-latest
 
@@ -15,7 +15,23 @@ jobs:
         DOCKER_USERNAME: secrets.DOCKER_USERNAME
         DOCKER_PASSWORD: secrets.DOCKER_PASSWORD
       run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build the Docker image
+    - name: Build the Docker CPU image
       run: docker build -t mstoelzle/dt-object-detection-training:latest dt-object-detection-training/
-    - name: Push the Docker image
+    - name: Push the Docker CPU image
       run: docker push mstoelzle/dt-object-detection-training:latest
+
+  build_gpu:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Docker login
+        env:
+          DOCKER_USERNAME: secrets.DOCKER_USERNAME
+          DOCKER_PASSWORD: secrets.DOCKER_PASSWORD
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build the Docker GPU image
+        run: docker build --build-arg GPU=-gpu -t mstoelzle/dt-object-detection-training:latest-gpu dt-object-detection-training/
+      - name: Push the Docker GPU image
+        run: docker push mstoelzle/dt-object-detection-training:latest-gpu
