--- a/.github/workflows/dockerimage_dt-object-detection-training.yml
+++ b/.github/workflows/dockerimage_dt-object-detection-training.yml
@@ -14,7 +14,7 @@ jobs:
       env:
         DOCKER_USERNAME: secrets.DOCKER_USERNAME
         DOCKER_PASSWORD: secrets.DOCKER_PASSWORD
-      run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
+      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
     - name: Build the Docker CPU image
       run: docker build -t mstoelzle/dt-object-detection-training:latest dt-object-detection-training/
     - name: Push the Docker CPU image
@@ -27,10 +27,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Docker login
-        env:
-          DOCKER_USERNAME: secrets.DOCKER_USERNAME
-          DOCKER_PASSWORD: secrets.DOCKER_PASSWORD
-        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Build the Docker GPU image
         run: docker build --build-arg GPU=-gpu -t mstoelzle/dt-object-detection-training:latest-gpu dt-object-detection-training/
       - name: Push the Docker GPU image
