--- a/dt-object-detection-training/workdir_sample/models/ssd_mobilenet_v2_quantized_300x300_coco/pipeline.config
+++ b/dt-object-detection-training/workdir_sample/models/ssd_mobilenet_v2_quantized_300x300_coco/pipeline.config
@@ -168,7 +168,7 @@ eval_config {
   num_examples: 321
   metrics_set: "coco_detection_metrics"
   use_moving_averages: true
-  include_metrics_per_category: true
+  include_metrics_per_category: false
 }
 eval_input_reader {
   label_map_path: "/workdir/data/dt_mscoco_label_map.pbtxt"
