added locational weights visualizer

--- a/dt-object-detection-training/Dockerfile
+++ b/dt-object-detection-training/Dockerfile
@@ -118,14 +118,12 @@ ENV INIT_WORKDIR_PATH="${REPO_PATH}/launch/init_workdir.sh" \
     TRAINING_LAUNCHFILE="${REPO_PATH}/launch/training.sh" \
     TENSORBOARD_LAUNCHFILE="${REPO_PATH}/launch/tensorboard.sh" \
     DATASET_PREPARATION_LAUNCHFILE="${REPO_PATH}/launch/dataset_preparation.sh" \
-    LOCATIONAL_WEIGHTS_GEN_LAUNCHFILE="${REPO_PATH}/launch/locational_weights_gen.sh"
-RUN chmod a+rwx ${TRAINING_LAUNCHFILE} ${TENSORBOARD_LAUNCHFILE} ${DATASET_PREPARATION_LAUNCHFILE} ${LOCATIONAL_WEIGHTS_GEN_LAUNCHFILE}
+    LOCATIONAL_WEIGHTS_GEN_LAUNCHFILE="${REPO_PATH}/launch/locational_weights_gen.sh" \
+    LOCATIONAL_WEIGHTS_VIZ_LAUNCHFILE="${REPO_PATH}/launch/locational_weights_viz.sh"
+RUN chmod a+rwx ${TRAINING_LAUNCHFILE} ${TENSORBOARD_LAUNCHFILE} ${DATASET_PREPARATION_LAUNCHFILE} ${LOCATIONAL_WEIGHTS_GEN_LAUNCHFILE} ${LOCATIONAL_WEIGHTS_VIZ_LAUNCHFILE}
 
 # port for tensorboard
 ENV TB_PORT 6006
-
-# visualize output (for example locational weights)
-ENV VISUALIZE=False
 
 # CUDA GPU config
 ENV CUDA_DEVICE_ORDER="PCI_BUS_ID" \
