update eval_config of ssdlite_mobilenet_v2_coco

--- a/dt-object-detection-training/workdir_sample/models/ssdlite_mobilenet_v2_coco/pipeline.config
+++ b/dt-object-detection-training/workdir_sample/models/ssdlite_mobilenet_v2_coco/pipeline.config
@@ -168,8 +168,9 @@ train_input_reader {
 }
 eval_config {
   num_examples: 321
-  max_evals: 10
-  use_moving_averages: false
+  metrics_set: "coco_detection_metrics"
+  use_moving_averages: true
+  include_metrics_per_category: false
 }
 eval_input_reader {
   label_map_path: "/workdir/data/dt_mscoco_label_map.pbtxt"
