--- a/dt-object-detection-training/workdir_sample/raw_data/images/.gitattributes
+++ b/dt-object-detection-training/workdir_sample/raw_data/images/.gitattributes
@@ -1,3 +1,4 @@
+*.jpg filter=lfs diff=lfs merge=lfs -text
 B_CR_Duckbar_frame01015.jpg filter=lfs diff=lfs merge=lfs -text
 B_CR_Duckbar_frame00464.jpg filter=lfs diff=lfs merge=lfs -text
 d_cr_zgxbot_00003.jpg filter=lfs diff=lfs merge=lfs -text
