--- a/dt-object-detection-training/workdir_sample/models/.gitattributes
+++ b/dt-object-detection-training/workdir_sample/models/.gitattributes
@@ -4,3 +4,5 @@ ssd_mobilenet_v2_quantized_300x300_coco/model.ckpt.meta filter=lfs diff=lfs merg
 ssdlite_mobilenet_v2_coco/model.ckpt.meta filter=lfs diff=lfs merge=lfs -text
 ssd_mobilenet_v2_quantized_300x300_coco/model.ckpt.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
 ssdlite_mobilenet_v2_coco/model.ckpt.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+ssd_mobilenet_v2_coco/model.ckpt.meta filter=lfs diff=lfs merge=lfs -text
+ssd_mobilenet_v2_coco/model.ckpt.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
