added inference graph export script

--- a/dt-object-detection-training/Dockerfile
+++ b/dt-object-detection-training/Dockerfile
@@ -108,6 +108,7 @@ ENV REPO_LIB_PATH="${REPO_PATH}/lib" \
 
 ENV CONFIG_WORKDIR_PATH="${WORKDIR_PATH}/config" \
     DATA_WORKDIR_PATH="${WORKDIR_PATH}/data" \
+    EXPORT_WORKDIR_PATH="${WORKDIR_PATH}/export" \
     MODELS_WORKDIR_PATH="${WORKDIR_PATH}/models" \
     RAW_DATA_WORKDIR_PATH="${WORKDIR_PATH}/raw_data"
 
@@ -115,11 +116,12 @@ ENV CONFIG_WORKDIR_PATH="${WORKDIR_PATH}/config" \
 # define launch scripts
 ENV WORKDIR_INIT_PATH="${REPO_PATH}/launch/workdir_init.sh" \
     TRAINING_LAUNCHFILE="${REPO_PATH}/launch/training.sh" \
+    INFERENCE_GRAPH_EXPORT_LAUNCHFILE="${REPO_PATH}/launch/inference_graph_export.sh" \
     TENSORBOARD_LAUNCHFILE="${REPO_PATH}/launch/tensorboard.sh" \
     DATASET_PREPARATION_LAUNCHFILE="${REPO_PATH}/launch/dataset_preparation.sh" \
     LOCATIONAL_WEIGHTS_GEN_LAUNCHFILE="${REPO_PATH}/launch/locational_weights_gen.sh" \
     LOCATIONAL_WEIGHTS_VIZ_LAUNCHFILE="${REPO_PATH}/launch/locational_weights_viz.sh"
-RUN chmod a+rwx ${TRAINING_LAUNCHFILE} ${TENSORBOARD_LAUNCHFILE} ${DATASET_PREPARATION_LAUNCHFILE} ${LOCATIONAL_WEIGHTS_GEN_LAUNCHFILE} ${LOCATIONAL_WEIGHTS_VIZ_LAUNCHFILE}
+RUN chmod a+rwx ${WORKDIR_INIT_PATH} ${TRAINING_LAUNCHFILE} ${INFERENCE_GRAPH_EXPORT_LAUNCHFILE} ${TENSORBOARD_LAUNCHFILE} ${DATASET_PREPARATION_LAUNCHFILE} ${LOCATIONAL_WEIGHTS_GEN_LAUNCHFILE} ${LOCATIONAL_WEIGHTS_VIZ_LAUNCHFILE}
 
 # port for tensorboard
 ENV TB_PORT 6006
@@ -138,6 +140,9 @@ ENV DUCKIEBOT_CALIBRATION_HOSTNAME='default' \
 
 # training settings
 ENV NUM_TRAIN_STEPS=50000
+
+# export inference graph settings
+ENV CHECKPOINT_NUMBER=0
 
 # needed if jupyter is used
 # EXPOSE 8888
