--- a/.github/workflows/dockerimage_dt-object-detection-training.yml
+++ b/.github/workflows/dockerimage_dt-object-detection-training.yml
@@ -12,6 +12,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Docker login
       run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    - name: Init and update git submodules
+      run: cd dt-object-detection-training && git submodule update
     - name: Build the Docker CPU image
       run: docker build -t mstoelzle/dt-object-detection-training:latest dt-object-detection-training/
     - name: Push the Docker CPU image
@@ -25,6 +27,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Init and update git submodules
+          run: cd dt-object-detection-training && git submodule update
       - name: Build the Docker GPU image
         run: docker build --build-arg GPU=-gpu -t mstoelzle/dt-object-detection-training:latest-gpu dt-object-detection-training/
       - name: Push the Docker GPU image
