--- a/.github/workflows/dockerimage_dt-object-detection-training.yml
+++ b/.github/workflows/dockerimage_dt-object-detection-training.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Init and update git submodules
-        run: cd dt-object-detection-training && git submodule update && pwd && ls tf
+        run: cd dt-object-detection-training && git submodule update && pwd && ls tf/models
       - name: Build the Docker CPU image
         run: docker build -t mstoelzle/dt-object-detection-training:latest dt-object-detection-training/
       - name: Push the Docker CPU image
@@ -28,7 +28,7 @@ jobs:
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Init and update git submodules
-        run: cd dt-object-detection-training && pwd && git submodule init && ls tf
+        run: cd dt-object-detection-training && pwd && git submodule init && git submodule update && ls tf/models
       - name: Build the Docker GPU image
         run: docker build --build-arg GPU=-gpu -t mstoelzle/dt-object-detection-training:latest-gpu dt-object-detection-training/
       - name: Push the Docker GPU image
