--- a/dt-object-detection-training/workdir_sample/models/dt_ssd_mobilenet_v2_quantized_320x320_coco/pipeline.config
+++ b/dt-object-detection-training/workdir_sample/models/dt_ssd_mobilenet_v2_quantized_320x320_coco/pipeline.config
@@ -178,7 +178,7 @@ train_config {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "/workdir/models/dt_ssd_mobilenet_v2_quantized_320x320_coco/model.ckpt-50000"
+  fine_tune_checkpoint: "/workdir/models/dt_ssd_mobilenet_v2_quantized_320x320_coco/model.ckpt"
   num_steps: 200000
   fine_tune_checkpoint_type: "detection"
   load_all_detection_checkpoint_vars: true
