Remove commented commands

--- a/googlecoral-duckiebot/Dockerfile
+++ b/googlecoral-duckiebot/Dockerfile
@@ -24,9 +24,6 @@ COPY ./dependencies-apt.txt "${REPO_PATH}/"
 COPY ./dependencies-py.txt "${REPO_PATH}/"
 
 # Python 3 requirement
-#RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-#RUN python3.5 get-pip.py
-
 RUN apt-get update
 RUN apt-get install -y python3-pip
 RUN pip3 install -r ${REPO_PATH}/dependencies-py.txt
@@ -56,12 +53,8 @@ RUN pip3 install tflite_runtime-1.14.0-cp35-cp35m-linux_armv7l.whl
 
 RUN mkdir coral && cd coral
 RUN git clone https://github.com/google-coral/tflite.git
-#RUN cd tflite/python/examples/classification
-#RUN bash install_requirements.sh
 
-# install python dependencies
-# RUN pip install -r ${REPO_PATH}/dependencies-py.txt
-
+# install image geometry for emergency stop ground projection dependency
 RUN apt-get update
 RUN apt-get install -y ros-kinetic-image-geometry
 
